<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="50dp">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="341dp"
        android:layout_height="510dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="right"
            android:inputType="textPersonName"
            android:onClick="onClickNumericalButton"
            android:text="0"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/buttonrow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="160dp">

            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_07" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_08" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_09" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="addClick"
                android:text="@string/button_add" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonrow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="160dp">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_04" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_05" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_06" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="minusClick"
                android:text="@string/button_minus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonrow04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_01" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_02" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_03" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="divideClick"
                android:text="@string/button_divide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="160dp">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="clearText"
                android:text="@string/button_CE" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="dotClick"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/btnX"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="multiplyClick"
                android:text="@string/button_multiplication" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="160dp">

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="buttonResultClick"
                android:text="@string/button_Enter" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>